<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/welcom_bg"
    tools:context=".modules.createrecovery.CreateRecoveryActivity">

    <TextView
        android:id="@+id/BRText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_text_hint"
        android:textColor="@color/white"
        android:textSize="@dimen/zt_27sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:background="@drawable/bg_white"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/zt_lu"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_rigest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_rigest"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="94dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:background="@drawable/bg_white"
        android:text="@string/rigest"
        android:textAllCaps="false"
        android:textColor="@color/zt_lu"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:drawableLeft="@mipmap/login_about"
        android:drawablePadding="5dp"
        android:text="@string/about_we"
        android:textColor="@color/white"
        android:textSize="@dimen/zt_13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>