<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".modules.walletsetting.WalletSetting">

    <include layout="@layout/title_project" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line" />

    <RelativeLayout
        android:id="@+id/pwd_wallet_rl"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/crypto_card_shape"
        android:visibility="gone">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pwd_wallet_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp" />


        <com.etzSharding.view.MText
            android:id="@+id/pwd_wallet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/pwd_wallet_icon"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/pwd_wallet_icon"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp"
            app:customTFont="CircularPro-Bold.otf" />

        <com.etzSharding.view.MText
            android:id="@+id/pwd_wallet_address"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/pwd_wallet_icon"
            android:layout_below="@id/wallets_name"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/pwd_wallet_icon"
            android:ellipsize="middle"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            app:customTFont="CircularPro-Book.otf" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.etzSharding.view.MText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/updata_pwd_old"
            android:textColor="@color/zt_black_2"
            android:textSize="@dimen/zt_14sp"
            app:customTFont="CircularPro-Bold.otf" />

        <com.etzSharding.view.MEdit
            android:id="@+id/current_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/updata_pwd_old01"
            android:imeActionId="6"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/zt_14sp"
            app:customTFont="CircularPro-Bold.otf" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.etzSharding.view.MText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/updata_pwd_new"
            android:textColor="@color/zt_black_2"
            android:textSize="@dimen/zt_14sp"
            app:customTFont="CircularPro-Bold.otf" />

        <com.etzSharding.view.MEdit
            android:id="@+id/new_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/modify_password_alert1"
            android:imeActionId="6"
            android:inputType="textPassword"
            android:maxLength="12"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/zt_14sp"
            app:customTFont="CircularPro-Bold.otf" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.etzSharding.view.MText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/updata_pwd_new_cf"
            android:textColor="@color/zt_black_2"
            android:textSize="@dimen/zt_14sp"
            app:customTFont="CircularPro-Bold.otf" />

        <com.etzSharding.view.MEdit
            android:id="@+id/affirm_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/updata_pwd_new_cf01"
            android:imeActionId="6"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/zt_14sp"
            app:customTFont="CircularPro-Bold.otf" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/line" />


    <com.etzSharding.view.MText
        android:id="@+id/updata_pwd_btn"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/create_wallet_btn_bg_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/updata_pwd_affirm"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="visible"
        app:customTFont="CircularPro-Bold.otf" />
</LinearLayout>